@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.0.6.RELEASE</version>
+    <version>2.1.0.RELEASE</version>
   </parent>
 
   <groupId>nl.xs4all.epotters</groupId>
@@ -32,6 +32,8 @@
     <!-- module>poc-cordova</module -->
     <!-- module>poc-evernote</module -->
     <!-- module>poc-jcr</module -->
+
+
   </modules>
 
 
@@ -41,7 +43,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
     <!-- Java version -->
-    <java.version>10</java.version>
+    <java.version>11</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
   </properties>
@@ -91,13 +93,6 @@
       <artifactId>spring-boot-starter-test</artifactId>
     </dependency>
 
-    <!-- Spring Boot 2 migration -->
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-properties-migrator</artifactId>
-    </dependency>
-
-
     <!-- Java 9 migration -->
     <dependency>
       <groupId>javax.xml.bind</groupId>
@@ -126,22 +121,6 @@
   <build>
     <plugins>
       <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <compilerArgs>
-            <arg>--add-modules</arg>
-            <arg>java.xml.bind</arg>
-          </compilerArgs>
-          <!-- release>${java.version}</release -->
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>--add-modules java.xml.bind</argLine>
-        </configuration>
-      </plugin>
-      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
       </plugin>
@@ -158,6 +137,18 @@
       <id>repository.spring.milestone</id>
       <name>Spring Milestone Repository</name>
       <url>http://repo.spring.io/milestone</url>
+    </repository>
+    <repository>
+      <snapshots />
+      <id>milestone-local</id>
+      <name>libs-milestone-local</name>
+      <url>https://repo.spring.io/libs-milestone-local</url>
+    </repository>
+    <repository>
+      <snapshots />
+      <id>snapshots</id>
+      <name>libs-snapshot</name>
+      <url>https://repo.spring.io/libs-snapshot</url>
     </repository>
   </repositories>
 
